Prevent horizontal overflow again

--- a/styles/demo.css
+++ b/styles/demo.css
@@ -53,8 +53,9 @@ body.custom-cursor *:not(.rotation-handle.active):not(.piece.active #shape) {
   pointer-events: none;
   left: 0;
   top: 0;
-  width: 0;
-  height: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .online-dot {
